# imguizmo-go

./: .gitmodules  CMakeLists.txt  README.md  go.mod  go.sum  imguizmo.go
.github/workflows/: example.yaml  libraries.yaml
example/: main.go
generator/: generator.go
